# kanaraimasu

./: .gitignore  README.md  build-and-deploy.sh  deploy.sh  kanaraimasu.code-workspace  kanaraimasu.py  main.py  prepare_assets.py  pyproject.toml  settings.json
assets/: __init__.py  assets_preparation.py  kanji.json
assets/font/: copyright.txt
screens/: __init__.py  gamescreen.py  kanaselectscreen.py  kanjioptionsscreen.py  menuscreen.py  screen.py  settingsscreen.py
utils/: __init__.py  collections.py  kana.py  kanji.py  settings.py  theme.py
widgets/: __init__.py  button.py  checkbox.py  heading.py  text.py  widget.py
